# deutschlandticket-planner-backend

./: Cargo.toml  Procfile  README.md  renovate.json  sonar-project.properties
.github/ISSUE_TEMPLATE/: featureanfrage.md  fehlermeldung.md
.github/workflows/: deploy-test.yml  fast-forward.yml  merge.yml  test.yml
doc/: .gitignore  index.js  package-lock.json  package.json
doc/src/: begriffe.adoc  dark.css  index.adoc
doc/src/entwicklerdoku/: index.adoc  zusammenfassung.adoc
src/: main.rs
