[package]
name = "deutschlandticket-planner-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }

[dev-dependencies]
axum-test = "17.2.0"
